--- a/index.html
+++ b/index.html
@@ -47,11 +47,10 @@
 				</div>	
 			</div>
 		</div>
-	</main>
+	
 
-	<footer class="footer">
 		<div class="container">
-			<div class="footer-inner">
+			<div class="inner">
 				<div class="item">
 					<div class="info">
 						<h2>BASIC</h2>
@@ -62,17 +61,17 @@
 				</div>
 				<div class="item">
 					<div class="info">
-						<h2>BASIC</h2>
-						<h3>Slow Orb</h3>
-						<p>Cast out a radianite orb that breaks into a slowing field upon impact with the ground.</p>
+						<h2>SIGNATURE</h2>
+						<h3>Healing Orb</h3>
+						<p>Heal an ally or yourself to full health over a few seconds..</p>
 					</div>
 					<img src="img/main/icon-2.svg">
 				</div>
 				<div class="item">
 					<div class="info">
-						<h2>BASIC</h2>
-						<h3>Slow Orb</h3>
-						<p>Cast out a radianite orb that breaks into a slowing field upon impact with the ground.</p>
+						<h2>ULTIMATE</h2>
+						<h3>Resurrection</h3>
+						<p>Target a friendly corpse. After a short delay, revive them with full health.</p>
 					</div>
 					<img src="img/main/icon-3.svg">
 				</div>
@@ -81,6 +80,8 @@
 				</div>
 			</div>
 		</div>
+		</main>
+	<footer class="footer">
 	</footer>
 
 </body>
