--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	<main class="main">
 		<div class="container">
 			<div class="main-inner"> 
-				<div>
+				<div class="hero">
 					<img src="img/main/item-1.png">	
 					<img src="img/main/item-2.png">	
 					<img src="img/main/item-3.png">	
